[package]
authors = ["jimizai <woshitiancai359@gmail.com>"]
description = "The ratelimit package provides an efficient token bucket implementation"
edition = "2018"
license = "MIT"
name = "ratelimit_rs"
readme = "README.md"
repository = "https://github.com/jimizai/ratelimit_rs"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
